# kannweg-engine

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
assets/: cog.gltf
shaders/: point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert
src/: first_app.cpp  first_app.h  keyboard_movement_controller.cpp  keyboard_movement_controller.h  lve_buffer.h  lve_camera.cpp  lve_camera.h  lve_descriptors.cpp  lve_descriptors.h  lve_device.cpp  lve_device.h  lve_frame_info.cpp  lve_frame_info.h  lve_game_object.cpp  lve_game_object.h  lve_model.cpp  lve_model.h  lve_pipeline.cpp  lve_pipeline.h  lve_renderer.cpp  lve_renderer.h  lve_swapchain.cpp  lve_swapchain.h  lve_window.cpp  lve_window.h  main.cpp  movement_controller.cpp  movement_controller.h  simple_render_system.cpp  simple_render_system.h
src/rendering/: lve_buffer.cpp  lve_frame_info.h  lve_pipeline.cpp  lve_pipeline.h  lve_renderer.cpp  lve_renderer.h  lve_swapchain.h  lve_window.h
src/rendering/systems/: point_light_system.cpp  point_light_system.h  simple_render_system.cpp  simple_render_system.h
